# alidataframework

./: .coverage  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aliframework/: README.md  __init__.py  api.py  config.py  db.py  errors.py  nosql.py  secrets.py  sftp.py
aliframework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aliframework/gcp/: __init__.py  bigquery.py  pipelines.py  storage.py
aliframework/tests/: test_api.py  test_db.py
docs/: testing-and-coverage.md
notebook/: api.ipynb  db.ipynb  gcp_storage_bq.ipynb  nosql.ipynb  secrets_vault.ipynb  sftp.ipynb
tests/integration/: conftest.py  test_databases_and_mongo.py  test_sftp.py  test_vault.py
tests/unit/: test_api.py  test_db.py  test_gcp.py  test_nosql.py  test_secrets.py  test_sftp_unit.py
